# leetcode

./: .gitmodules  README.md  Start-Problem.ps1
libs/latex/sty/: preamble.sty  sourcecode.sty
problems/problem-0001/documentation/: Build-Document.ps1  main.tex
problems/problem-0001/documentation/sty/: preamble.sty  sourcecode.sty
problems/problem-0001/documentation/tex/: problem.tex  references.tex  solutions.tex  title.tex
problems/problem-0001/solutions/cpp/: CMakeLists.txt  Solution-0001.h  Solution-0001.test.cpp  Test-CPP-Solution.ps1
problems/problem-0001/solutions/python3/: Test-Python-Solution.ps1  solution_0001.py  test_solution_0001.py
problems/problem-0002/documentation/: Build-Document.ps1  main.tex
problems/problem-0002/documentation/tex/: problem.tex  references.tex  solutions.tex
problems/problem-0002/solutions/cpp/: CMakeLists.txt  Solution-0002.h  Solution-0002.test.cpp  Test-CPP-Solution.ps1
problems/problem-0002/solutions/python3/: linkedlist.py  solution_0002.py  test_solution_0002.py
tools/: Pipfile  README.md  start_problem.py
tools/templates/documentation/: Build-Document.ps1.j2  main.tex.j2
tools/templates/documentation/tex/: problem.tex.j2  references.tex.j2  solutions.tex.j2
tools/templates/solutions/cpp/: CMakeLists.txt.j2  Solution-xxxx.h.j2  Solution-xxxx.test.cpp.j2  Test-CPP-Solution.ps1.j2
tools/templates/solutions/python3/: Test-Python-Solution.ps1.j2  solution_xxxx.py.j2  test_solution_xxxx.py.j2
